# ctxsift

./: .dockerignore  .env.example  .gitignore  .no-repeat.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  SKILL.md  no_repeat.py  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  cut-docs-release.yml  docs-ci.yml  python-release.yml
benchmark/: .gitignore  README.md  __init__.py  crazy.json  dataset.jsonl  dataset_research_prompt.md  loader.py  matrix.json  metrics.py  model_profiles.md  normalize_dataset.py  report.py  runner.py  schemas.py  scoring.py  semantic_quality.py  stats.py  viewer.py
benchmark/results/: viewer.html
benchmark/results/cpu-granite-4.0-350m-no-quant-20260518T031037Z/: cpu-granite-4.0-350m-no-quant.json  cpu-granite-4.0-350m-no-quant.md
benchmark/results/cpu-models-20260518T071946Z/: cpu-gemma3-270m-it-no-quant.json  cpu-gemma3-270m-it-no-quant.md  cpu-granite-4.0-350m-no-quant.json  cpu-granite-4.0-350m-no-quant.md  cpu-kiwi-1.0-0.7b-no-quant.json  cpu-kiwi-1.0-0.7b-no-quant.md  cpu-qwen2-500m-no-quant.json  cpu-qwen2-500m-no-quant.md  cpu-qwen2.5-coder-0.5b-instruct-128k-no-quant.json  cpu-qwen2.5-coder-0.5b-instruct-128k-no-quant.md  cpu-qwen3-0.6b-no-quant.json  cpu-qwen3-0.6b-no-quant.md  cpu-qwen3.5-0.8b-no-quant.json  cpu-qwen3.5-0.8b-no-quant.md  cpu-smollm2-360m-no-quant.json  cpu-smollm2-360m-no-quant.md
benchmark/results/cpu-models-20260521T094012Z/: cpu-gemma3-270m-it-no-quant.json  cpu-gemma3-270m-it-no-quant.md  cpu-granite-4.0-350m-no-quant.json  cpu-granite-4.0-350m-no-quant.md  cpu-kiwi-1.0-0.7b-no-quant.json  cpu-kiwi-1.0-0.7b-no-quant.md  cpu-lfm2.5-1.2b-instruct-no-quant.json  cpu-lfm2.5-1.2b-instruct-no-quant.md  cpu-qwen2-500m-no-quant.json  cpu-qwen2-500m-no-quant.md  cpu-qwen2.5-0.5b-instruct-no-quant.json  cpu-qwen2.5-0.5b-instruct-no-quant.md  cpu-qwen2.5-coder-0.5b-instruct-128k-no-quant.json  cpu-qwen2.5-coder-0.5b-instruct-128k-no-quant.md  cpu-qwen3-0.6b-no-quant.json  cpu-qwen3-0.6b-no-quant.md  cpu-qwen3.5-0.8b-no-quant.json  cpu-qwen3.5-0.8b-no-quant.md  cpu-smollm2-360m-no-quant.json  cpu-smollm2-360m-no-quant.md
benchmark/results/cpu-models-20260524T014526Z/: cpu-LFM2-350M-Extract.json  cpu-LFM2-350M-Extract.md  cpu-LFM2-700M.json  cpu-LFM2-700M.md  cpu-LFM2.5-350M.json  cpu-LFM2.5-350M.md  cpu-gemma-3-1b-it.json  cpu-gemma-3-1b-it.md  cpu-gemma3-270m-it.json  cpu-gemma3-270m-it.md  cpu-granite-4.0-350m.json  cpu-granite-4.0-350m.md  cpu-lfm2.5-1.2b-instruct.json  cpu-lfm2.5-1.2b-instruct.md  cpu-qwen2.5-0.5b-instruct.json  cpu-qwen2.5-0.5b-instruct.md  cpu-qwen2.5-coder-0.5b-instruct-128k.json  cpu-qwen2.5-coder-0.5b-instruct-128k.md  cpu-qwen3-0.6b.json  cpu-qwen3-0.6b.md  cpu-qwen3.5-0.8b.json  cpu-qwen3.5-0.8b.md  cpu-smollm2-360m.json  cpu-smollm2-360m.md
benchmark/results/cpu-smollm2-360m-no-quant-20260518T013957Z/: cpu-smollm2-360m-no-quant.json  cpu-smollm2-360m-no-quant.md
benchmark/results/gpu-models-20260519T054816Z/: gpu-gemma4-e2b-it-no-quant.json  gpu-gemma4-e2b-it-no-quant.md  gpu-granite-3.3-2b-instruct-no-quant.json  gpu-granite-3.3-2b-instruct-no-quant.md  gpu-lfm2.5-1.2B-instruct-no-quant.json  gpu-lfm2.5-1.2B-instruct-no-quant.md  gpu-qwen2.5-1.5b-no-quant.json  gpu-qwen2.5-1.5b-no-quant.md  gpu-qwen3.5-0.8b-no-quant.json  gpu-qwen3.5-0.8b-no-quant.md  (+2 more)
docs/: .gitignore  Dockerfile  README.md  astro.config.mjs  nginx.conf  package.json  pnpm-lock.yaml
installer/: ctxsift-install-linux.sh  ctxsift-install-macos.sh  ctxsift-install-windows.ps1
src/ctxsift/: __init__.py  acceleration.py  agent_hosts_catalog.json  agent_skill_template.md  agent_skills.py  cli.py  compression.py  compression_prompt.py  config.py  config_store.py  configure_flow.py  configure_setup.py  daemon_worker.py  dev.py  doctor.py  doctor_probes.py  embedding_indexer.py  embedding_text.py  execution.py  extraction.py  extraction_domains.py  file_fingerprint.py  git_file_status.py  git_metadata.py  local_model_strategy_catalog.json  model_preload.py  recall.py  recall_freshness.py  recall_hybrid.py  recall_matches.py  recall_ranking.py  retention.py  run_capture.py  storage.py  types.py  vector_store.py  workspace.py  workspace_ignore.py  workspace_setup.py
tests/: conftest.py  test_agent_skills.py  test_benchmark_files.py  test_cli.py  test_compress_cli.py  test_compression.py  test_compression_intent.py  test_config.py  test_config_cli.py  test_configure_cli.py  test_daemon_backends.py  test_daemon_cli.py  test_daemon_client_and_git_metadata.py  test_daemon_manager.py  test_daemon_registry.py  test_daemon_server.py  test_daemon_signatures.py  test_daemon_worker.py  test_dev_and_prompt_helpers.py  test_doctor.py  test_embedding_and_model_exports.py  test_embedding_backend.py  test_embedding_indexer.py  test_execution.py  test_extraction.py  test_init_cli.py  test_litellm_backend.py  test_llama_cpp_backend.py  test_local_model_strategy.py  test_misc_coverage_helpers.py  test_model_factory.py  test_model_preload.py  test_models_package.py  test_no_repeat.py  test_no_repeat_hook.py  test_package_metadata.py  test_quantized_model_cache.py  test_recall.py  test_recall_cli.py  test_recall_query_prep.py  (+9 more)
tools/: run_no_repeat_hook.py
(+192 files in other folders)
