[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxsift"
version = "0.1.0"
description = "Local-first command output compression and recall for coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21,<0.22",
    "litellm>=1.79,<2.0",
    "platformdirs>=4.4,<5.0",
    "pydantic>=2.11,<3.0",
    "sentence-transformers>=5.4,<6.0",
    "sqlite-vec>=0.1.9,<0.2",
    "torch>=2.4,<3.0",
    "transformers>=4.57,<5.0",
    "typer>=0.16,<1.0",
]

[project.scripts]
ctxsift = "ctxsift.cli:app"
fmt = "ctxsift.dev:fmt"
lint = "ctxsift.dev:lint"

[dependency-groups]
dev = [
    "black>=25.1,<26.0",
    "mypy>=1.16,<2.0",
    "pytest>=8.4,<9.0",
    "ruff>=0.12,<0.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/ctxsift"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '^/(src|tests)/.*\.pyi?$'

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true
