[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "ctxsift"
version = "0.1.0"
description = "Local-first command output compression and recall for coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "huggingface-hub==1.15.0",
    "llama-cpp-python==0.3.23",
    "platformdirs==4.9.6",
    "pydantic==2.13.4",
    "sentence-transformers==5.5.0",
    "sqlite-vec==0.1.9",
    "torch==2.12.0",
    "transformers==5.8.1",
    "typer==0.25.1",
    "onnxruntime==1.26.0",
]

[project.scripts]
ctxsift = "ctxsift.cli:app"
fmt = "ctxsift.dev:fmt"
lint = "ctxsift.dev:lint"

[project.optional-dependencies]
remote = [
    "litellm==1.84.0",
]

quant = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
]

gpu = [
    "onnxruntime-gpu==1.26.0",
    "flash-attn==2.8.3; platform_system != 'Windows'",
]

all = [
    "litellm==1.84.0",
    "onnxruntime-gpu==1.26.0",
    "flash-attn==2.8.3; platform_system != 'Windows'",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "ruff==0.15.13",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/ctxsift"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py", "benchmark/**/*.py"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '^/(src|tests|benchmark)/.*\.pyi?$'

[tool.mypy]
files = ["src", "tests", "benchmark"]
mypy_path = ["src"]
explicit_package_bases = true
