[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "ctxsift"
version = "1.0.0"
description = "Local-first command output compression and recall for coding agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "huggingface-hub==1.15.0",
    "llama-cpp-python==0.3.23",
    "platformdirs==4.9.6",
    "pydantic==2.13.4",
    "rich==15.0.0",
    "sentence-transformers==5.5.0",
    "sqlite-vec==0.1.9",
    "torch==2.12.0",
    "transformers==5.8.1",
    "typer==0.25.1",
    "onnxruntime==1.26.0",
]

[project.scripts]
ctxsift = "ctxsift.cli:app"
fmt = "ctxsift.dev:fmt"
lint = "ctxsift.dev:lint"

[project.optional-dependencies]
remote = [
    "litellm==1.84.0",
]

quant = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
]

gpu = [
    "onnxruntime-gpu==1.26.0",
    "flash-attn==2.8.3; platform_system != 'Windows'",
]

all = [
    "litellm==1.84.0",
    "onnxruntime-gpu==1.26.0",
    "flash-attn==2.8.3; platform_system != 'Windows'",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "ruff==0.15.13",
    "types-PyYAML==6.0.12.20250516",
    "types-psutil==7.0.0.20251001",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/ctxsift"]
include = ["src/ctxsift/agent_skill_template.md"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "pyproject.toml",
    "README.md",
    "LICENSE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/ctxsift/agent/skills.py",
    "src/ctxsift/models/transformers_helper.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py", "benchmark/**/*.py"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '^/(src|tests|benchmark)/.*\.pyi?$'

[tool.mypy]
files = ["src", "tests", "benchmark"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["sqlite_vec"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm"]
ignore_missing_imports = true
